# mpibackend4jax

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  MANIFEST.in  README.md  build_dev.py  example_simple.py  hatch_build.py  pyproject.toml  setup.py
examples/: example.py  example_nk.py
src/mpibackend4jax/: __init__.py  mpitrampoline_cluster.py  plugin.py
src/mpitrampoline4jax/: __init__.py
