[build-system]
requires = ["hatchling", "cmake"]
build-backend = "hatchling.build"

[project]
name = "mpitrampoline4jax"
authors = [
    {name = "Filippo Vicentini"}
]
version = "0.1.0"
description = "MPITrampoline integration for JAX"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "jax>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mpitrampoline4jax"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"
dependencies = ["cmake"]

[tool.hatch.build.targets.editable.hooks.custom]
path = "hatch_build.py"
dependencies = ["cmake"]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
]
