[build-system]
requires = ["hatchling", "cmake"]
build-backend = "hatchling.build"

[project]
name = "mpitrampoline4jax"
authors = [
    {name = "Filippo Vicentini"}
]
version = "0.1.0"
description = "MPITrampoline integration for JAX"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jax>=0.7",
    "netket>=3.18",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mpitrampoline4jax"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"
dependencies = ["cmake"]

[tool.hatch.build.targets.editable.hooks.custom]
path = "hatch_build.py"
dependencies = ["cmake"]

[tool.uv.sources]
netket = { path = "../../../Nextcloud/Codes/Python/netket", editable = true }

[dependency-groups]
dev = [
    "ruff>=0.12.5",
    "pre-commit",
]

[tool.ruff]
exclude = ["src/MPIwrapper"]

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["E402"]
