[build-system]
requires = ["hatchling", "cmake"]
build-backend = "hatchling.build"

[project]
name = "mpibackend4jax"
authors = [
    {name = "Filippo Vicentini"}
]
version = "0.1.0"
description = "MPI backend integration for JAX"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jax>=0.6.0",
]

[project.entry-points.jax_plugins]
mpibackend4jax = "mpibackend4jax.plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/mpibackend4jax"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"
dependencies = ["cmake"]

[tool.hatch.build.targets.editable.hooks.custom]
path = "hatch_build.py"
dependencies = ["cmake"]

[dependency-groups]
dev = [
    "ruff==0.12.5",
    "pre-commit",
    "netket @ git+https://github.com/netket/netket.git@pv/jax-0.7-easy",
]

[tool.ruff]
exclude = ["src/MPIwrapper"]

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["E402"]
